# bajzel

./: Cargo.toml  README.md
docs/: ideas.md
examples/: bitmap.fuzl  current.fuzl  example0.fuzl  example1.fuzl  example2.fuzl
lib/: error.rs  lexer.rs  lib.rs
lib/evaluator/: generator.rs  mod.rs  structure.rs
lib/generator/: mod.rs
lib/lexer/: funcs.rs  mod.rs
lib/parser/: funcs.rs  mod.rs
src/: main.rs
tests/lexer/: basics.rs  examples.rs  mod.rs  programs.rs
tests/parser/: basics.rs  examples.rs  mod.rs
