[package]
authors = ["Marcin Glinski <undefinedlamb@gmail.com>"]
edition = "2021"
keywords =["fuzzing"]
name = "bajzel"
version = "0.1.0"

[dependencies]
clap = "4.0.15"
itertools = "0.10.5"
nom = "7.1.1"

[dev-dependencies]
pretty_assertions = "1.3.0"

[lib]
path = "lib/lib.rs"
name = "bajzel_lib"
test = false
doctest = false

[[bin]]
path = "src/main.rs"
name = "bajzel"
test = false
doctest = false
